# moxie

./: README.md  moxie.postman_collection.json  pyproject.toml  schema.sql
app/: admin.py  config.py  database.py  main.py  models.py
app/core/: models.py
app/spa/: models.py  routers.py
migrations/: env.py
migrations/versions/: 60e5bc2feb0e_create_join_table_appointment_service.py  62f403336599_add_total_duration_and_total_price.py  69ddd66e26b0_create_service_table_and_associate_it_.py  7c18cdacd89e_create_med_spa_table.py  d0930134cb37_create_appointment_table_and_.py
