[project]
name = "moxie"
version = "0.1.0"
description = "This project is Moxie's coding assignment."
authors = [
    {name = "M", email = "lmiguelvargasf@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.2.1",
    "sqlmodel>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "starlette-admin>=0.13.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
config = [
    "python-dotenv>=1.0.1",
]
lint = [
    "ruff>=0.4.3",
]
debug = [
    "rich>=13.7.1",
]

[tool.pdm.scripts]
dev = "dotenv run fastapi dev"
check-fix = "ruff check --fix"
_format = "ruff format"
format = {composite = ["check-fix" , "_format"]}

[tool.ruff]
lint.select = [
    # "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    "I",  # isort
    "N", # pep8-naming
    "W", # pycodestyle warnings
]
